# DualISO_EG2014

./: CMakeLists.txt  README.md  README.txt  VclBayerPatterns.cpp  VclBayerPatterns.h  VclKernelRegression.cpp  VclKernelRegression.h  VclShadingCorrection.cpp  VclShadingCorrection.h  main.cpp
cmake/: FindOpenEXR.cmake
image/VclExr/: CMakeLists.txt  CMakeLists.txt~  Makefile  VclExr.cpp  VclExr.h  cmake_install.cmake
image/VclRaw/: CMakeLists.txt  CMakeLists.txt~  Makefile  VclRaw.cpp  VclRaw.h  cmake_install.cmake
matlab_calibration/: calibrateDualISO.m  getFrameStatsStruct.m
opensource/arg/: CMakeLists.txt  CMakeLists.txt~  Makefile  README  arg.c  arg.h  arg_parse.3  cmake_install.cmake  expr.c  expr.h  simple.h  tb.c
opensource/rawspeed/: BitPumpMSB16.h  ByteStream.h  CMakeLists.txt  CMakeLists.txt~  Camera.h  CameraMetaData.h  CameraMetadataException.h  CameraSensorInfo.h  ColorFilterArray.h  Common.cpp  Common.h  DngDecoderSlices.h  FileIOException.h  FileMap.h  IOException.h  Makefile  Point.h  RawDecoder.h  RawDecoderException.h  RawImage.h  TiffEntry.h  TiffIFD.h  TiffParserException.h  cmake_install.cmake  vclNotes.txt
util/VclMatlab/: CMakeLists.txt  CMakeLists.txt~  Makefile  VclMatlab.cpp  VclMatlab.h  cmake_install.cmake
