CMAKE_MINIMUM_REQUIRED(VERSION 2.8.8)
PROJECT(rawspeed)

add_library(rawspeed 
AriDecoder.cpp
AriDecoder.h
ArwDecoder.cpp
ArwDecoder.h
BitPumpJPEG.cpp
BitPumpJPEG.h
BitPumpMSB16.cpp
BitPumpMSB16.h
BitPumpMSB32.cpp
BitPumpMSB32.h
BitPumpMSB.cpp
BitPumpMSB.h
BitPumpPlain.cpp
BitPumpPlain.h
BlackArea.cpp
BlackArea.h
ByteStream.cpp
ByteStream.h
ByteStreamSwap.cpp
ByteStreamSwap.h
Camera.cpp
Camera.h
CameraMetaData.cpp
CameraMetadataException.cpp
CameraMetadataException.h
CameraMetaData.h
CameraSensorInfo.cpp
CameraSensorInfo.h
CiffEntry.cpp
CiffEntry.h
CiffIFD.cpp
CiffIFD.h
CiffParser.cpp
CiffParserException.cpp
CiffParserException.h
CiffParser.h
CiffTag.h
ColorFilterArray.cpp
ColorFilterArray.h
Common.cpp
Common.h
Cr2Decoder.cpp
Cr2Decoder.h
CrwDecoder.cpp
CrwDecoder.h
DcrDecoder.cpp
DcrDecoder.h
DngDecoder.cpp
DngDecoder.h
DngDecoderSlices.cpp
DngDecoderSlices.h
DngOpcodes.cpp
DngOpcodes.h
ErfDecoder.cpp
ErfDecoder.h
FileIOException.cpp
FileIOException.h
FileMap.cpp
FileMap.h
FileReader.cpp
FileReader.h
FileWriter.cpp
FileWriter.h
HasselbladDecompressor.cpp
HasselbladDecompressor.h
IOException.cpp
IOException.h
KdcDecoder.cpp
KdcDecoder.h
LJpegDecompressor.cpp
LJpegDecompressor.h
LJpegPlain.cpp
LJpegPlain.h
MefDecoder.cpp
MefDecoder.h
MosDecoder.cpp
MosDecoder.h
MrwDecoder.cpp
MrwDecoder.h
NakedDecoder.cpp
NakedDecoder.h
NefDecoder.cpp
NefDecoder.h
NikonDecompressor.cpp
NikonDecompressor.h
OrfDecoder.cpp
OrfDecoder.h
PefDecoder.cpp
PefDecoder.h
PentaxDecompressor.cpp
PentaxDecompressor.h
Point.h
pugiconfig.hpp
pugixml.cpp
pugixml.hpp
RafDecoder.cpp
RafDecoder.h
RawDecoder.cpp
RawDecoderException.cpp
RawDecoderException.h
RawDecoder.h
RawImage.cpp
RawImageDataFloat.cpp
RawImageDataU16.cpp
RawImage.h
RawParser.cpp
RawParser.h
Rw2Decoder.cpp
Rw2Decoder.h
SrwDecoder.cpp
SrwDecoder.h
StdAfx.cpp
StdAfx.h
ThreefrDecoder.cpp
ThreefrDecoder.h
TiffEntryBE.cpp
TiffEntryBE.h
TiffEntry.cpp
TiffEntry.h
TiffIFDBE.cpp
TiffIFDBE.h
TiffIFD.cpp
TiffIFD.h
TiffParser.cpp
TiffParserException.cpp
TiffParserException.h
TiffParser.h
TiffParserHeaderless.cpp
TiffParserHeaderless.h
TiffTag.h
X3fDecoder.cpp
X3fDecoder.h
X3fParser.cpp
X3fParser.h
)

target_include_directories (rawspeed PUBLIC ${CMAKE_CURRENT_SOURCE_DIR})
